--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-slider": "^1.2.3",
     "axios": "^1.7.7",
     "bootstrap-icons": "^1.11.3",
     "js-cookie": "^3.0.5",
