--- a/backend/composer.json
+++ b/backend/composer.json
@@ -7,6 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "aws/aws-sdk-php": "^3.340",
         "intervention/image": "^3.11",
         "intervention/image-laravel": "^1.4",
         "laravel/framework": "^11.31",
